Links with <a> tag.

--- a/HTML/02_Heading_Paragraphs_Links_BookmarkManager/Bookmark_Manager.html
+++ b/HTML/02_Heading_Paragraphs_Links_BookmarkManager/Bookmark_Manager.html
@@ -4,6 +4,17 @@ The most important attribute of the <a> element is the href attribute, which ind
 
 <a href="link">title</a> 
 
+
+_blank: Opens the linked document in a new window or tab.
+_top: Opens document in the full body of the window.
+_self: Opens document in the same window or tab (default behavior).
+_parent: Opens the linked document in the parent frame.
+
+To link to a specific section of a webpage, you can:
+Use the name or id attribute of the target section.
+Use a hyperlink with a hash (#) followed by the target id or name.
+
+
 The target attribute specifies where to open the linked document. Using target="_blank" in the anchor tag will
  open the link in a new tab when clicked.
 
