--- a/HTML/01_Basics/1_index.html
+++ b/HTML/01_Basics/1_index.html
@@ -11,6 +11,32 @@ head contains all the meta data, page title , css link, etc.
 
 body has the main content.
 
+
+HTML Tags
+
+HTML tags are the markers that define the start and end of an element. 
+They are wrapped in angle brackets, like <p> and </p>.
+
+HTML Elements
+An HTML element includes an opening tag, content, and a closing tag, forming a 
+complete set. For example, <p>This is a paragraph.</p>.
+
+
+ID Attribute
+
+The ID attribute is used to assign a unique identifier to an HTML element. Each element with an ID has its own unique identity, 
+similar to how each individual has a unique identity. Multiple elements cannot have the same ID.
+Example:
+  <p id="html">This is an HTML tutorial</p>
+  <p id="python">This is a Python tutorial</p>
+
+
+Class Attribute
+
+The class attribute is used to associate an HTML element with a particular class, typically for styling or JavaScript
+ manipulation. Unlike the ID attribute, the class attribute is not unique, and multiple elements can share the same class.
+
+
 -->
 
 
