Heading, paragraphs, pre tag and links.

--- a/HTML/02_Heading_Paragraphs_Links_pre_BookmarkManager/index.html
+++ b/HTML/02_Heading_Paragraphs_Links_pre_BookmarkManager/index.html
@@ -9,6 +9,9 @@ lorem<num>is used to make a dummy paragraph with num number of words. Used as pl
 inline css: When CSS is written using the style attribute within HTML, it's called an “inline style”
 In our example, p is the tag and style is the attribute.
 attributes give properties to elements.
+
+The <pre> tag preserves the original formatting of text, making it an excellent choice for displaying 
+code where spacing and indentation are key.
 -->
 
 <!DOCTYPE html>
@@ -27,6 +30,14 @@ attributes give properties to elements.
     <h6>Main Boomarks using h6</h6>
     <h7>Main Boomarks using h7</h7>
     <h8>Main Boomarks using h8</h8>
+
+    <pre>
+      int main()
+      {
+        print("Hello world.\n");
+        return 0;
+      }
+    </pre>
 
     <p style="background-color: hotpink;"> <!--inline css-->
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque sint,
