--- a/HTML/01_Basics/1_index.html
+++ b/HTML/01_Basics/1_index.html
@@ -37,6 +37,24 @@ The class attribute is used to associate an HTML element with a particular class
  manipulation. Unlike the ID attribute, the class attribute is not unique, and multiple elements can share the same class.
 
 
+Inline elements:
+Inline elements do not start on a new line and only take up as much width as necessary. They are part of the flow within 
+other elements.
+Inline elements can contain other inline elements, but they generally should not contain block-level elements. 
+For example, you could nest a <strong> (strong emphasis) element within a <span> (a generic inline container) element
+Common Inline Elements
+
+    <span>: A generic inline container for text
+    <a>: Defines a hyperlink
+    <strong>: Defines important text
+    <em>: Defines emphasized text
+    <img>: Embeds an image
+    <input>: Defines an input control
+
+
+
+
+
 -->
 
 
