--- a/HTML/03_Pics_Tables_Lists/03_Table.html
+++ b/HTML/03_Pics_Tables_Lists/03_Table.html
@@ -26,6 +26,13 @@ tbody is used for the body.
 tr can be put inside them to group them together.
 
 br tag is used to break the line so the text after it goes to the next line.
+
+
+To make your tables more accessible, you can use the scope attribute in <th> elements to specify if they are headers 
+for columns, rows, or groups of columns or rows.
+<th scope="col">Name</th>
+<th scope="col">Age</th>
+
 -->
 
 
