--- a/HTML/04_Forms_And_Input_Tags/01_form_input_types.html
+++ b/HTML/04_Forms_And_Input_Tags/01_form_input_types.html
@@ -33,6 +33,9 @@ tel             ---- 	Allows the user to enter a telephone number.
 time            ---- 	Allows the user to select a time.
 url             ---- 	Allows the user to enter a URL.
 week            ---- 	Allows the user to select a week.
+
+Get method is mainly used on the client (Browser) side to send a request to a specified server to get certain data or resources.
+Post method is mainly used at the client (Browser) side to send data to a Specified server in order to create or rewrite a particular resource/data.
 -->
 
 <!DOCTYPE html>
