--- a/HTML/01_Basics/1_index.html
+++ b/HTML/01_Basics/1_index.html
@@ -6,20 +6,23 @@ srcipt:src is used to link HTML file with JSS
 <script src=" jss file name  "></script> 
 
 lang is the language in which the page is in.
-
 head contains all the meta data, page title , css link, etc.
-
 body has the main content.
 
 
 HTML Tags
 
+They help in implementing a particular utility.
+Tag is a special entity using which the content of the website can be provided with structure, semantics and format.
 HTML tags are the markers that define the start and end of an element. 
 They are wrapped in angle brackets, like <p> and </p>.
+<p> is the opening tag.
+</p> is the closing tag.
 
 HTML Elements
 An HTML element includes an opening tag, content, and a closing tag, forming a 
 complete set. For example, <p>This is a paragraph.</p>.
+Here, html is the root element as it is not nested in any other element.
 
 
 ID Attribute
@@ -58,7 +61,7 @@ Common Inline Elements
 -->
 
 
-<!DOCTYPE html>
+<!DOCTYPE html>  <!--Declares that html5 is used here-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
