--- a/HTML/02_Heading_Paragraphs_Links_pre_BookmarkManager/Bookmark_Manager.html
+++ b/HTML/02_Heading_Paragraphs_Links_pre_BookmarkManager/Bookmark_Manager.html
@@ -21,6 +21,12 @@ The target attribute specifies where to open the linked document. Using target="
 
 if we want the links in different lines, usually lists are used. But a wrong way to accomplish this is by putting 
 the anchor tags in their own paragraphs.
+
+nav element is basically an invisible box that can be used to group certain elements, nav is used
+for navigation based elements.
+
+article element can be used for main content. 
+
 -->
 
 
@@ -34,11 +40,13 @@ the anchor tags in their own paragraphs.
 <body>
     <h1>My Bookmarks - Aditya Khatawkar</h1>
     <h2>Primary Bookmarks</h2>
-    <p><a target="_blank" href="https://www.google.com">Open Google</a></p>
-    <p><a target="_blank" href="https://www.youtube.com">Open YouTube</a></p>
-    <p><a target="_blank" href="https://www.facebook.com">Open FaceBook</a></p>
-    <p><a target="_blank" href="https://www.twitter.com">Open Twitter</a></p>
-    <p><a target="_blank" href="https://www.quora.com">Open Quora</a></p>
+    <nav>
+        <p><a target="_blank" href="https://www.google.com">Open Google</a></p>
+        <p><a target="_blank" href="https://www.youtube.com">Open YouTube</a></p>
+        <p><a target="_blank" href="https://www.facebook.com">Open FaceBook</a></p>
+        <p><a target="_blank" href="https://www.twitter.com">Open Twitter</a></p>
+        <p><a target="_blank" href="https://www.quora.com">Open Quora</a></p>
+    </nav>
     <h2>Secondary Bookmarks</h2>
     <p><a target="_blank" href="https://www.wikipedia.com">Open Wikipedia</a></p>
     <p><a target="_blank" href="https://www.github.com">Open Github</a></p>
