--- a/HTML/02_Heading_Paragraphs_Links_pre_BookmarkManager/index.html
+++ b/HTML/02_Heading_Paragraphs_Links_pre_BookmarkManager/index.html
@@ -12,6 +12,9 @@ attributes give properties to elements.
 
 The <pre> tag preserves the original formatting of text, making it an excellent choice for displaying 
 code where spacing and indentation are key.
+
+<b> or <strong> is used to make text bold. 
+<i> or <em> is used to make text italic. em stands for emphasize.
 -->
 
 <!DOCTYPE html>
@@ -40,7 +43,7 @@ code where spacing and indentation are key.
     </pre>
 
     <p style="background-color: hotpink;"> <!--inline css-->
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque sint,
+      <strong>Lorem</strong> <em>ipsum</em> dolor, <strong>s</strong>i<strong>t</strong> amet consectetur adipisicing elit. Itaque sint,
       suscipit dignissimos voluptatibus facilis ut corrupti atque. Dignissimos
       aliquam, eum eaque a unde iusto quae impedit aperiam porro! Explicabo,
       assumenda?
